# django-test-blog

./: .env  .env.db  .gitignore  README.md  docker-compose.yml  pyproject.toml
blog/: Dockerfile  pyproject.toml
blog/accounts/: urls.py  views.py
blog/blog/: settings.py  urls.py
blog/blog_app/: admin.py  forms.py  models.py  urls.py  views.py
blog/templates/: article_confirm_delete.html  article_detail.html  base.html  index.html  new_article.html
blog/templates/accounts/: dashboard.html  register.html
nginx/: nginx.conf
