[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["monomonedula <valh@tuta.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"
django-summernote = "^0.8.11"
gunicorn = "^20.0.4"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
